--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('assets/grass.png');
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
 }
 
 code {
